--- a/.gitignore
+++ b/.gitignore
@@ -142,7 +142,8 @@ DocProject/Help/*.hhk
 DocProject/Help/*.hhp
 DocProject/Help/Html2
 DocProject/Help/html
-
+~
+.~lock.*
 # Click-Once directory
 publish/
 
